spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_label_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(3) main(clk: clk) -> int<8> {
    reg;
        'a
    reg;
        'a
    reg;
        0
}

error: Stage was already defined
  ┌─ testinput:5:10
  │
3 │         'a
  │          - Previously defined here
4 │     reg;
5 │         'a
  │          ^ 'a has already been defined


