spade-tests/src/snapshots/spade_tests__ast_lowering__enum_variant_pattern_without_arguments.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum E {
    Variant { b: bool },
}

fn f(e: E) -> bool {
    let E::Variant = e;
    false
}


error: Expected 1 arguments, got 0
  ┌─ testinput:6:9
  │
6 │     let E::Variant = e;
  │         ^^^^^^^^^^ Expected 1 arguments here


