spade-tests/src/snapshots/spade_tests__ast_lowering__expect_pipeline_got_entity_error_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
entity x(clk: clock) -> bool {true}

entity test() -> bool {
    inst(0) x()
}

error: Expected x to be a pipeline
  ┌─ testinput:4:13
  │
1 │ entity x(clk: clock) -> bool {true}
  │ ----------------------------------- x is an entity
  ·
4 │     inst(0) x()
  │     ----    ^ Expected pipeline
  │     │        
  │     because of this inst
  │
  = Consider removing the depth
  │
4 │     inst(0) x()
  │     ~~~~


