spade-tests/src/snapshots/spade_tests__ast_lowering__fn_exists_but_not_in_trait_impl.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait X {}
impl X for bool {}
impl bool {
    fn hidden(self) {}
}
fn foo<T>(x: T)
    where T: X {

    x.hidden()
}
fn bar() {
    foo(false)
}


error: Method `hidden` on type `bool` is outside of trait bound `X`
  ┌─ testinput:9:7
  │
7 │     where T: X {
  │              - Trait bound specified here
8 │ 
9 │     x.hidden()
  │       ^^^^^^ Method exists, but is not allowed here due to trait bound
  │
  = help: Move the method to trait `X`
  = The error is in a generic unit instantiated at
    ╰ testinput:12 foo<bool>
