spade-tests/src/snapshots/spade_tests__ast_lowering__functions_are_not_returnable_values.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn f() -> bool { true }
fn main() -> bool {
    let x = f;
    true
}


error: Expected f to be a value
  ┌─ testinput:3:13
  │
1 │ fn f() -> bool { true }
  │ ----------------------- f is a function
2 │ fn main() -> bool {
3 │     let x = f;
  │             ^ Expected value
  │
  = Expected value
  = Found function


